--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
     "rewrites": [{ 
         "source": "/(.*)",
-        "destination": "/" }]
+        "destination": "/", 
+        "cleanUrls": true
+    
+    }]
 }
